@@ -165,7 +165,6 @@ importFrom(ape,read.tree)
 importFrom(ape,reorder.phylo)
 importFrom(ape,which.edge)
 importFrom(ape,write.tree)
-importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,GeomCurve)
 importFrom(ggplot2,GeomLabel)
 importFrom(ggplot2,GeomPoint)
@@ -214,6 +213,7 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rgb)
