@@ -12,7 +12,7 @@
 ##' @return tree view with insets
 ##' @export
 ##' @author Guangchuang Yu
-inset <- function(tree_view, insets, width=0.05, height=0.05, hjust=0, vjust=0, x="node") {
+inset <- function(tree_view, insets, width=0.1, height=0.1, hjust=0, vjust=0, x="node") {
     df <- tree_view$data[as.numeric(names(insets)),]
     x <- match.arg(x, c("node", "branch", "edge"))
 
